[package]
name = "bl602-flashloader"
version = "0.1.0"
authors = ["9names"]
edition = "2018"

[dependencies]
panic-abort = "0.3.2"
bl602_rom_wrapper = { git="https://github.com/9names/bl602-rom-wrapper", branch="main" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
offset_0 = []
offset_2000 = []
offset_10000 = []
offset_11000 = []